# grok-build-search

./: .gitignore  Cargo.toml  LICENSE  README.md
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml  release.yml
plugins/grok-build-search/: .mcp.json
plugins/grok-build-search/.codex-plugin/: plugin.json
plugins/grok-build-search/scripts/: grok-build-search-mcp
plugins/grok-build-search/skills/grok-search/: SKILL.md
plugins/grok-build-search/skills/grok-search/agents/: openai.yaml
src/: error.rs  grok.rs  lib.rs  main.rs  mcp.rs  model.rs  runtime.rs  service.rs  url_guard.rs
tests/: grok_process.rs  mcp_contract.rs  mcp_stdio.rs  model_contract.rs  service_contract.rs  test_fake_grok.py  test_launcher.py  test_repository_layout.py  url_guard.rs
tests/fixtures/: fake-grok
