[package]
name = "grok-build-search-mcp"
version = "0.1.4"
edition = "2024"
rust-version = "1.94.1"
description = "Codex MCP bridge for the local Grok Build CLI"
license = "MIT"
repository = "https://github.com/lich13/grok-build-search"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
fs2 = "0.4"
html-escape = "0.2"
linkify = "0.10"
pulldown-cmark = "0.13"
rmcp = { version = "2.2.0", features = ["transport-io"] }
rustix = { version = "1.1", features = ["fs", "process"] }
schemars = "1.0"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"
thiserror = "2.0"
tokio = { version = "1.48", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"

[lints.rust]
unsafe_code = "forbid"
